--- a/templates/forumapp/thread_list.html
+++ b/templates/forumapp/thread_list.html
@@ -2,9 +2,29 @@
 
 {% block content %}
 
-    <div class="button">
-        <h2> <a href="{% url 'thread_new' %}">New thread</a></h2>
-    </div>
+
+    {% if user.is_authenticated %}
+        <div class="button">
+            <h2> <a href="{% url 'logout' %}">Log out</a></h2>
+        </div>
+
+        <div class="button">
+            <h2> <a href="{% url 'thread_new' %}">New thread</a></h2>
+        </div>
+
+        <div class="button">
+            <h2>Logged in as {{ request.user.username }}</h2>
+        </div>
+    {% else %}
+        <div class="button">
+            <h2> <a href="{% url 'signup' %}">Sign up</a></h2>
+        </div>
+
+        <div class="button">
+            <h2> <a href="{% url 'login' %}">Login</a></h2>
+        </div>
+    {% endif %}
+
 
     <div class="header2">
         <h2>Threads</h2>
