--- a/templates/forumapp/thread.html
+++ b/templates/forumapp/thread.html
@@ -7,23 +7,31 @@
     </div>
 
         {% for post in posts %}
-        <div class="date">
-            <p>Date</p>
-            <p>{{ post.created_date }}</p>
-        </div>
+            <div class="date">
+                <p>Date</p>
+                <p>{{ post.created_date }}</p>
+            </div>
 
-        <div class="date">
-            <p>Author</p>
-            <p>{{ post.author }}</p>
-        </div>
+            <div class="date">
+                <p>Author</p>
+                <p>{{ post.author }}</p>
+            </div>
 
-        <div class="thread">
-            <h2>{{ post.text }}</h2>
-        </div>
+            {% if user.is_superuser %}
+                <div class="admbutton">
+                    <h4><a href={% url 'delete_post' pk=post.pk th_pk=thread.pk %}>DELETE POST</a></h4>
+                </div>
+            {% endif %}
+
+            <div class="thread">
+                <h2>{{ post.text }}</h2>
+            </div>
     {% endfor %}
 
-    <div class="button">
-        <h2><a href="{% url 'post_new' pk=thread.pk %}">Respond</a></h2>
-    </div>
+    {% if user.is_authenticated %}
+        <div class="button">
+            <h2><a href="{% url 'post_new' pk=thread.pk %}">Respond</a></h2>
+        </div>
+    {% endif %}
 
 {% endblock %}
