--- a/templates/forumapp/thread_list.html
+++ b/templates/forumapp/thread_list.html
@@ -13,7 +13,7 @@
         </div>
 
         <div class="button">
-            <h2>Logged in as {{ request.user.username }}</h2>
+            <h2>Logged in as <a href={% url 'user' pk=request.user.pk %}>{{ request.user.username }}</a></h2>
         </div>
     {% else %}
         <div class="button">
